[contact] fixed header z-index + styles + btn drawer

--- a/src/layouts/Main/styles.module.less
+++ b/src/layouts/Main/styles.module.less
@@ -6,6 +6,7 @@
 }
 
 .header {
+  z-index: 8;
   position: fixed;
   width: 100%;
   background-color: @dark;
