--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -8,8 +8,8 @@
 @wrong: rgba(214, 75, 45, 1);
 @good: rgba(72, 173, 100, 1);
 @rating: rgba(253, 195, 45, 1);
-@overlay: rgba(16, 10, 24, 0.3);
+@overlay: rgba(16, 10, 24, 0.7);
 
 .medGradient {
-  background: linear-gradient(to right, rgba(190, 190, 190, 1) 0, rgba(213, 210, 216, 1) 50%, rgba(190, 190, 190, 1) 100%);
+  background: linear-gradient(to right, rgb(154, 154, 154) 0, rgba(213, 210, 216, 1) 25%, rgba(213, 210, 216, 1) 75%, rgba(154, 154, 154) 100%);
 }
